# objectiveai-ensemble

./: .gitignore  CLAUDE.md  Cargo.toml  INPUTBUILDER_FIX_IMPLEMENTATION.md  README.md  package-lock.json  package.json  publish.ps1  publish.sh
coding-agent-scratch/: README.md  cors-test.html  package.json  test-schema.js  test-sdk.ts  yc-application-scorer-function.json
ensemble/: Cargo.toml  README.md
objectiveai-api/: Cargo.toml  README.md
objectiveai-cli/: .gitignore  OLD_CLI_MISSING_FEATURES.md  PROMPT_GUIDELINES.md  README.md  package.json  tsconfig.json  tsup.config.ts
objectiveai-ensemble/: Cargo.toml  LICENSE  publish.ps1  publish.sh
objectiveai-ensemble-js/: Cargo.toml
objectiveai-ensemble/objectiveai-ensemble/: Cargo.toml
objectiveai-ensemble/objectiveai-ensemble-js/: Cargo.toml
objectiveai-ensemble/objectiveai-ensemble/src/ensemble/: mod.rs
objectiveai-ensemble/objectiveai-ensemble/src/ensemble_llm/: message.rs  provider_preferences.rs  reasoning.rs  stop.rs  verbosity.rs
objectiveai-function-agent-js/: LICENSE  package.json  tsconfig.json  tsup.config.ts
objectiveai-function-tree/: package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
objectiveai-github-discord-notifier/: CLAUDE.md  Dockerfile  cloudbuild.yaml  main.py  requirements.txt
objectiveai-js/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
objectiveai-mcp/: Cargo.toml
objectiveai-mcp/src/: main.rs
objectiveai-rs/: Cargo.toml  README.md
objectiveai-rs-wasm-js/: Cargo.toml  README.md
objectiveai-rs-wasm-js/src/: lib.rs
objectiveai-rs/src/: lib.rs  prefixed_uuid.rs  util.rs
objectiveai-rs/src/auth/: api_key.rs  http.rs  mod.rs  request.rs  response.rs
objectiveai-rs/src/chat/: mod.rs
objectiveai-rs/src/chat/completions/: http.rs
objectiveai-rs/src/chat/completions/request/: chat_completion_create_params.rs  message.rs  prediction.rs  response_format.rs  tool.rs
objectiveai-rs/src/chat/completions/response/: logprobs.rs  role.rs  usage.rs  util.rs
objectiveai-rs/src/chat/completions/response/streaming/: chat_completion_chunk.rs  choice.rs  delta.rs  mod.rs  object.rs  tool_call.rs
objectiveai-rs/src/chat/completions/response/unary/: choice.rs  mod.rs  object.rs  tool_call.rs
objectiveai-rs/src/ensemble/: ensemble.rs  http.rs  mod.rs  response.rs
objectiveai-rs/src/ensemble_llm/: http.rs  mod.rs  output_mode.rs  provider.rs  reasoning.rs  verbosity.rs
objectiveai-rs/src/functions/: function.rs  http.rs  mod.rs  profile.rs  remote.rs  response.rs  task.rs
objectiveai-rs/src/functions/executions/: http.rs  mod.rs  retry_token.rs
objectiveai-rs/src/functions/executions/request/: body.rs  mod.rs  path.rs  reasoning.rs  request.rs  strategy.rs
objectiveai-rs/src/functions/executions/response/streaming/: function_execution_chunk.rs  function_execution_task_chunk.rs  mod.rs  reasoning_summary_chunk.rs  task_chunk.rs  vector_completion_task_chunk.rs
objectiveai-rs/src/functions/executions/response/unary/: function_execution_task.rs  object.rs  reasoning_summary.rs  task.rs  vector_completion_task.rs
objectiveai-rs/src/functions/expression/: error.rs  expression.rs  input.rs  mod.rs  params.rs  runtime.rs  starlark.rs
objectiveai-rs/src/functions/profiles/: http.rs  response.rs
objectiveai-rs/src/functions/profiles/computations/: http.rs  mod.rs
objectiveai-rs/src/functions/profiles/computations/request/: body.rs  mod.rs  path.rs
objectiveai-rs/src/functions/profiles/computations/response/: fitting_stats.rs
objectiveai-rs/src/functions/profiles/computations/response/streaming/: function_profile_computation_chunk.rs  object.rs
objectiveai-rs/src/functions/profiles/computations/response/unary/: function_profile_computation.rs  mod.rs  object.rs
objectiveai-rs/src/functions/quality/: CLAUDE.md  check_branch_function.rs  check_branch_scalar_function.rs  check_branch_scalar_function_tests.rs  check_branch_vector_function.rs  check_branch_vector_function_tests.rs  check_description.rs  check_function_test_helpers.rs  check_input_schema.rs  check_leaf_function.rs  check_leaf_scalar_function.rs  check_leaf_scalar_function_tests.rs  check_leaf_vector_function.rs  check_leaf_vector_function_tests.rs  check_modalities.rs  check_output_expression.rs  check_scalar_fields.rs  check_scalar_fields_tests.rs  check_vector_fields.rs  check_vector_fields_tests.rs  compile_and_validate.rs  example_inputs.rs  mod.rs
objectiveai-rs/src/functions/quality/example_inputs/: any_of.rs  array.rs  array_tests.rs  audio.rs  boolean.rs  file.rs  image.rs  integer.rs  mod.rs  multi.rs  number.rs  object.rs  optional.rs  string.rs  tests.rs  video.rs
objectiveai-rs/src/http/: client.rs  error.rs  mod.rs
objectiveai-rs/src/vector/completions/: http.rs  mod.rs
objectiveai-rs/src/vector/completions/cache/: http.rs  mod.rs  request.rs  response.rs
objectiveai-rs/src/vector/completions/request/: ensemble.rs  mod.rs  profile.rs  vector_completion_create_params.rs
objectiveai-rs/src/vector/completions/response/: usage.rs  vote.rs
objectiveai-rs/src/vector/completions/response/streaming/: chat_completion_chunk.rs  mod.rs  object.rs  vector_completion_chunk.rs
objectiveai-rs/src/vector/completions/response/unary/: vector_completion.rs
objectiveai-scripts/: CLAUDE.md  README.md  compute-function-count.sh
objectiveai-web/: .gitignore  CLAUDE.md  Dockerfile  README.md  TESTING_CHECKLIST.md  cloudbuild.yaml  eslint.config.mjs  next.config.ts  package.json  (+2 more)
objectiveai-web-new/: CLAUDE.md  Dockerfile  cloudbuild.yaml  package.json
objectiveai/objectiveai-wasm-js/: Cargo.toml
objectiveai/objectiveai-wasm-js/src/: lib.rs
(+970 files in other folders)
