[package]
name = "objectiveai"
version = "0.1.5"
edition = "2024"
authors = ["ObjectiveAI <admin@objective-ai.io>"]
description = "ObjectiveAI SDK, definitions, and utilities"
license = "MIT"
repository = "https://github.com/ObjectiveAI/objectiveai"
homepage = "https://objective-ai.io"
documentation = "https://docs.rs/objectiveai"
readme = "README.md"
keywords = ["llm", "ai", "ensemble"]
publish = true

[features]
default = ["http"]
http = ["dep:reqwest", "dep:reqwest-eventsource", "dep:eventsource-stream", "dep:futures", "dep:serde_path_to_error"]

[dependencies]
base62 = { version = "2.2.1" }
serde = { version = "1.0.219", features = ["derive"] }
indexmap = { version = "2.2.3", features = ["serde"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
twox-hash = { version = "2.1.1", default-features = false, features = ["xxhash3_128", "alloc"] }
rust_decimal = { version = "1.39.0", features = ["serde-float", "macros"] }
jmespath = { version = "0.4.0" }
thiserror = {  version = "2.0.12" }
base64 = { version = "0.22.1" }
chrono = { version = "=0.4.39", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
json-escape = { version = "0.3.1" }
reqwest = { version = "0.12.15", default-features = false, features = ["charset", "http2", "rustls-tls", "json"], optional = true }
reqwest-eventsource = { version = "0.6.0", optional = true }
eventsource-stream = { version = "0.2.3", optional = true }
futures = { version = "0.3.31", optional = true }
serde_path_to_error = { version = "0.1.17", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.16.0", features = ["v4", "serde", "js"] }