[package]
name = "objectiveai-ensemble-js"
version = "0.1.3"
edition = "2024"
authors = ["ObjectiveAI <admin@objective-ai.io>"]
description = "JavaScript WebAssembly bindings for objectiveai-ensemble"
license = "MIT"
repository = "https://github.com/ObjectiveAI/objectiveai"
homepage = "https://objective-ai.io"
keywords = ["llm", "ai", "ensemble", "wasm", "javascript"]
publish = true

[package.metadata.wasm-pack]
name = "@objectiveai/ensemble"

[lib]
crate-type = ["cdylib"]

[dependencies]
objectiveai-ensemble = { path = "../objectiveai-ensemble", version = "0.1.2" }
wasm-bindgen = { version = "0.2.105" }
serde-wasm-bindgen = { version = "0.6.5" }
