[package]
name = "objectiveai-ensemble"
version = "0.1.3"
edition = "2024"
authors = ["ObjectiveAI <admin@objective-ai.io>"]
description = "ObjectiveAI Ensemble definitions and utilities"
license = "MIT"
repository = "https://github.com/ObjectiveAI/objectiveai"
homepage = "https://objective-ai.io"
keywords = ["llm", "ai", "ensemble"]
publish = true

[dependencies]
base62 = { version = "2.2.1" }
serde = { version = "1.0.219", features = ["derive"] }
indexmap = { version = "2.2.3", features = ["serde"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
twox-hash = { version = "2.1.1", default-features = false, features = ["xxhash3_128", "alloc"] }