[package]
name = "objectiveai-wasm-js"
version = "0.1.2"
edition = "2024"
authors = ["ObjectiveAI <admin@objective-ai.io>"]
description = "JavaScript WebAssembly bindings for ObjectiveAI"
license = "MIT"
repository = "https://github.com/ObjectiveAI/objectiveai"
homepage = "https://objective-ai.io"
keywords = ["llm", "ai", "ensemble"]
publish = true

[lib]
crate-type = ["cdylib"]

[dependencies]
objectiveai = { path = "../objectiveai", version = "0.1.2", default-features = false }
wasm-bindgen = { version = "0.2.105" }
serde-wasm-bindgen = { version = "0.6.5" }
